신경망 학습

--- a/mnist/mnist.ipynb
+++ b/mnist/mnist.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "import sys, os\n",
     "sys.path.append(os.pardir)\n",
-    "from mnist.mnist import load_mnist\n",
+    "from dataset.mnist import load_mnist\n",
     "\n",
     "(x_train, t_train), (x_test, t_test) = load_mnist(flatten=True, normalize=False)\n"
    ]
